[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/dash.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/House In a Forest Loop.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/TremLoadingloopl.wav" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 250, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="canDash" from="Player" to="." method="_on_Player_canDash"]
[connection signal="dash" from="Player" to="." method="_on_Player_dash"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
